--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "workspace",
+  "name": "proficiency-genius-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend server for the English Proficiency Test app.",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Berkay Cekmez",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@google/genai": "^1.16.0",
+    "@google/generative-ai": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.19.2"
   }
 }
